# spider-lib

./: .gitmodules  Cargo.toml  Makefile  PUBLISH_INSTRUCTIONS.md  README.md  cleanup_and_verify.sh  publish_crates.sh  sync_versions.sh  verify_build.sh
.cargo/: config.toml
.github/workflows/: publish.yml
examples/: books.rs  quotes.rs  quotes_scraper.rs  quotes_stream.rs  streaming.rs
src/: lib.rs  prelude.rs
tests/: basic_test.rs
