[package]
name = "spider-lib"
version = "1.1.0"
edition = "2024"
authors = ["mzyui <mzyui@proton.me>"]
description = "A Rust-based web scraping framework inspired by Scrapy (Python)."
homepage = "https://github.com/spider-lib/spider-lib"
repository = "https://github.com/spider-lib/spider-lib"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/spider-lib"
keywords = ["web-scraping", "crawler", "scraper", "async", "rust"]
categories = ["web-programming", "development-tools", "parsing"]

[workspace]
members = [
    "spider-core",
    "spider-downloader",
    "spider-macro",
    "spider-middleware",
    "spider-pipeline",
    "spider-util",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

spider-util = { version = "0.1.1", path = "spider-util" }
spider-macro = { version = "0.1.3", path = "spider-macro" }
spider-middleware = { version = "0.1.2", path = "spider-middleware" }
spider-core = { version = "0.1.2", path = "spider-core" }
spider-pipeline = { version = "0.1.3", path = "spider-pipeline" }
spider-downloader = { version = "0.1.2", path = "spider-downloader" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

