[package]
name = "spider-lib"
version = "1.2.1"
edition = "2024"
authors = ["mzyui <mzyui@proton.me>"]
description = "A Rust-based web scraping framework inspired by Scrapy (Python)."
homepage = "https://github.com/spider-lib/spider-lib"
repository = "https://github.com/spider-lib/spider-lib"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/spider-lib"
keywords = ["web-scraping", "crawler", "scraper", "async", "rust"]
categories = ["web-programming", "development-tools", "parsing"]

[workspace]
members = [
    "spider-core",
    "spider-downloader",
    "spider-macro",
    "spider-middleware",
    "spider-pipeline",
    "spider-util",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

spider-util = { version = "0.1.7", path = "spider-util" }
spider-macro = { version = "0.1.5", path = "spider-macro" }
spider-middleware = { version = "0.1.7", path = "spider-middleware", features = ["core"] }
spider-core = { version = "0.2.0", path = "spider-core" }
spider-pipeline = { version = "0.1.6", path = "spider-pipeline" }
spider-downloader = { version = "0.2.0", path = "spider-downloader" }

[features]
default = ["core"]
core = ["spider-middleware/core", "spider-pipeline/core"]

middleware-cache = ["spider-middleware/middleware-cache"]
middleware-proxy = ["spider-middleware/middleware-proxy"]
middleware-user-agent = ["spider-middleware/middleware-user-agent"]
middleware-robots = ["spider-middleware/middleware-robots"]
middleware-cookies = ["spider-middleware/middleware-cookies"]

pipeline-csv = ["spider-pipeline/pipeline-csv"]
pipeline-json = ["spider-pipeline/pipeline-json"]
pipeline-jsonl = ["spider-pipeline/pipeline-jsonl"]
pipeline-sqlite = ["spider-pipeline/pipeline-sqlite"]
pipeline-stream-json = ["spider-pipeline/pipeline-stream-json"]

checkpoint = ["spider-core/checkpoint"]
cookie-store = ["spider-core/cookie-store", "middleware-cookies"]

stream = ["spider-util/stream", "spider-downloader/stream", "spider-core/stream"]

# Note: middleware-cookies and cookie-store are interdependent features
# When using middleware-cookies, cookie-store should also be enabled
# When using cookie-store, middleware-cookies functionality may be desired

[[example]]
name = "quotes"
path = "examples/quotes.rs"

[[example]]
name = "quotes_stream"
path = "examples/quotes_stream.rs"
required-features = ["stream"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

