[package]
name = "spider-lib"
version = "1.3.0-beta"
edition = "2024"
authors = ["mzyui <mzyui@proton.me>"]
description = "A Rust-based web scraping framework inspired by Scrapy (Python)."
homepage = "https://github.com/spider-lib/spider-lib"
repository = "https://github.com/spider-lib/spider-lib"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/spider-lib"
keywords = ["web-scraping", "crawler", "scraper", "async", "rust"]
categories = ["web-programming", "development-tools", "parsing"]

[workspace]
members = [
    "spider-core",
    "spider-downloader",
    "spider-macro",
    "spider-middleware",
    "spider-pipeline",
    "spider-util",
]

[dependencies]

spider-util = { version = "0.1.8", path = "spider-util" }
spider-macro = { version = "0.1.6", path = "spider-macro" }
spider-middleware = { version = "0.1.8", path = "spider-middleware", features = ["core"] }
spider-core = { version = "0.2.2", path = "spider-core" }
spider-pipeline = { version = "0.1.8", path = "spider-pipeline" }


[features]
default = ["core"]
core = ["spider-middleware/core", "spider-pipeline/core"]

middleware-cache = ["spider-middleware/middleware-cache"]
middleware-proxy = ["spider-middleware/middleware-proxy"]
middleware-user-agent = ["spider-middleware/middleware-user-agent"]
middleware-robots = ["spider-middleware/middleware-robots"]
middleware-cookies = ["spider-middleware/middleware-cookies"]

pipeline-csv = ["spider-pipeline/pipeline-csv"]
pipeline-json = ["spider-pipeline/pipeline-json"]
pipeline-jsonl = ["spider-pipeline/pipeline-jsonl"]
pipeline-sqlite = ["spider-pipeline/pipeline-sqlite"]
pipeline-stream-json = ["spider-pipeline/pipeline-stream-json"]

checkpoint = ["spider-core/checkpoint"]
cookie-store = ["spider-core/cookie-store", "middleware-cookies"]


# Note: middleware-cookies and cookie-store are interdependent features
# When using middleware-cookies, cookie-store should also be enabled
# When using cookie-store, middleware-cookies functionality may be desired

[[example]]
name = "quotes"
path = "examples/quotes.rs"

[[example]]
name = "books"
path = "examples/books.rs"


[dev-dependencies]
env_logger = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4"
dashmap = "6.1.0"
